--- a/Localization/ru_RU.xaml
+++ b/Localization/ru_RU.xaml
@@ -16,9 +16,11 @@
     SuccessStorySettingsView
     -->
 
-    <sys:String x:Key="LOCSucessStoryEnableSteam">Включить достижения Steam.</sys:String>
-    <sys:String x:Key="LOCSucessStoryEnableGog">Включить достижения GOG.</sys:String>
-    <sys:String x:Key="LOCSucessStoryEnableOrigin">Включить достижения Origin.</sys:String>
+    <sys:String x:Key="LOCSucessStoryEnableSteam">Включить достижения Steam</sys:String>
+    <sys:String x:Key="LOCSucessStoryEnableGog">Включить достижения GOG</sys:String>
+    <sys:String x:Key="LOCSucessStoryEnableOrigin">Включить достижения Origin</sys:String>
+
+    <sys:String x:Key="LOCSucessStoryIsAsc">Ascending</sys:String>
 
     <sys:String x:Key="LOCSucessStoryDatabase">Database manipulation</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetData">Get data</sys:String>
